- [add] Backup prune implemented GFS (grandfather, father son). Check to enable in the DBMan form. Tool tip explains all
- [add] font colour added to button boxes (except for antenna box)
- [add] click colour added to button boxes (default orange)
- [add] warning shown in Linearity form if SetPk is different to that expected for the hardware
- [add] include timestamp on discord messages
- [change] moved release notes button from setup to the about box
- [change] skin images are resized to button/panel/slider etc instead of relying on tile property
- [change] button clicks are ignored in button boxes that are faded
- [change] nf_1 and nf_2 has become nf, and will read from the trx container it is in (noise floor)
- [fix] variables that have name with _double now consider %precis=N%
- [fix] resolved issue where redraw of console controls became very slow after 8thOct Windows update
- [fix] button boxes filter/antenna would not save columns correctly
- [fix] fade on rx and fade on tx fixed for button boxes
- [fix] when in Tx rx1, selecting a bandstack entry will not updated it or attempt to change to it
- [fix] mox & ping tot now work for times greater than 59 seconds
- [fix] text overlay will now retrieve rx1 and rx2 data correctly
- [fix] setup and other dropdown menus will show if window doesn't have focus and the menu is clicked
- [fix] single cal retries up to 5 times if feedback levels are not suitable. Fixes issue where it would need to be clicked multiple times if tx-att was not where it needed to be
- [fix] fixed issues when serialising an object out to a string to be stored in the database. Resolves missing memories for Diversity
- [fix] crash in IOThreadStop() fixed in netinterface.c if moving between p1 and p2 radios without restarting thetis

## v2.10.3.6 Main New Features
- database manager
- many new meter items, including rotator, band/filter/mode/antenna button boxes, text overlay and led indicator, much much more