@@ -17,6 +17,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [add] click colour added to button boxes (default orange)
 - [add] warning shown in Linearity form if SetPk is different to that expected for the hardware
 - [add] include timestamp on discord messages
+- [add] filter display meter item
 - [change] moved release notes button from setup to the about box
 - [change] skin images are resized to button/panel/slider etc instead of relying on tile property
 - [change] button clicks are ignored in button boxes that are faded
@@ -32,6 +33,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [fix] single cal retries up to 5 times if feedback levels are not suitable. Fixes issue where it would need to be clicked multiple times if tx-att was not where it needed to be
 - [fix] fixed issues when serialising an object out to a string to be stored in the database. Resolves missing memories for Diversity
 - [fix] crash in IOThreadStop() fixed in netinterface.c if moving between p1 and p2 radios without restarting thetis
+- [fix] changing tx filter width when rx2 enabled and vfob-tx will now use rx2 mode. Very old bug, pre-dates 27th Feb 2019
 
 ## v2.10.3.6 Main New Features
 - database manager
